--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "decryptionsoftwaretruehear",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "main": "src/index.js",
   "bin": "dist/bundle.cjs",
   "scripts": {
     "build": "node build.js && npm run pkg-all",
-    "pkg-all": "npm run pkg-win && npm run pkg-linux && npm run pkg-macos",
-    "pkg-win": "pkg dist/bundle.cjs --targets node18-win-x64 --output dist/decrypt-win.exe",
-    "pkg-linux": "pkg dist/bundle.cjs --targets node18-linux-x64 --output dist/decrypt-linux",
-    "pkg-macos": "pkg dist/bundle.cjs --targets node18-macos-x64 --output dist/decrypt-macos"
+    "pkg-all": "npm run pkg-win",
+    "pkg-win": "pkg dist/bundle.cjs --targets node20-win-x64   --output dist/decrypt-win.exe",
+    "pkg-linux": "pkg dist/bundle.cjs --targets node20-linux-x64 --output dist/decrypt-linux",
+    "pkg-macos": "pkg dist/bundle.cjs --targets node20-macos-x64 --output dist/decrypt-macos",
+    "start": "node src/index.js"
   },
   "keywords": [
     "cli",
@@ -23,6 +24,7 @@
   "description": "A terminal-based decryption software with beautiful UI",
   "dependencies": {
     "chalk": "^5.4.1",
+    "crypto-js": "^4.2.0",
     "csv-parse": "^5.6.0",
     "inquirer": "^12.5.0",
     "ora": "^8.2.0",
@@ -37,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "@yao-pkg/pkg": "^6.5.1",
+    "@yao-pkg/pkg-fetch": "^3.5.23",
     "esbuild": "^0.25.5"
   }
 }
