--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "decryptionsoftwaretruehear",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "type": "module",
   "main": "src/index.js",
   "bin": "dist/bundle.cjs",
   "scripts": {
     "build": "node build.js && npm run pkg-all",
-    "pkg-all": "npm run pkg-win",
+    "pkg-all": "npm run pkg-win && npm run pkg-linux && npm run pkg-macos",
     "pkg-win": "pkg dist/bundle.cjs --targets node20-win-x64   --output dist/decrypt-win.exe",
     "pkg-linux": "pkg dist/bundle.cjs --targets node20-linux-x64 --output dist/decrypt-linux",
     "pkg-macos": "pkg dist/bundle.cjs --targets node20-macos-x64 --output dist/decrypt-macos",
