--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "decryptionsoftwaretruehear",
-  "version": "1.0.4",
+  "version": "1.0.401",
   "type": "module",
   "main": "src/index.js",
   "bin": "dist/bundle.cjs",
   "scripts": {
     "build": "node build.js && npm run pkg-all",
     "pkg-all": "npm run pkg-win && npm run pkg-linux && npm run pkg-macos",
-    "pkg-win": "pkg dist/bundle.cjs --targets node20-win-x64   --output dist/decrypt-win.exe",
-    "pkg-linux": "pkg dist/bundle.cjs --targets node20-linux-x64 --output dist/decrypt-linux",
-    "pkg-macos": "pkg dist/bundle.cjs --targets node20-macos-x64 --output dist/decrypt-macos",
+    "pkg-win": "pkg dist/bundle.cjs --targets node18-win-x64   --output dist/truehear-dc-win.exe",
+    "pkg-linux": "pkg dist/bundle.cjs --targets node18-linux-x64 --output dist/truehear-dc-linux",
+    "pkg-macos": "pkg dist/bundle.cjs --targets node18-macos-x64 --output dist/truehear-dc-macos",
     "start": "node src/index.js"
   },
   "keywords": [
@@ -39,8 +39,7 @@
     ]
   },
   "devDependencies": {
-    "@yao-pkg/pkg": "^6.5.1",
-    "@yao-pkg/pkg-fetch": "^3.5.23",
-    "esbuild": "^0.25.5"
+    "esbuild": "^0.25.5",
+    "pkg": "^5.8.1"
   }
 }
